--- a/backend/helper/emailTemplate.html
+++ b/backend/helper/emailTemplate.html
@@ -21,7 +21,7 @@
       box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
     }
     h1 {
-      color: #4CAF50;
+      color: #48a4f0;
       margin-top: 0;
     }
     p {
@@ -31,8 +31,9 @@
     a {
       display: inline-block;
       padding: 12px 24px;
-      background-color: #4CAF50;
-      color: #ffffff;
+      background-color:#4CAF50;
+      text:white;
+      color: #f4f4f4;
       text-decoration: none;
       border-radius: 4px;
     }
@@ -41,7 +42,7 @@
       color: #777;
     }
     .company {
-      color: #4CAF50;
+      color: #48a4f0;
       font-weight: bold;
     }
 
@@ -76,3 +77,9 @@
   </div>
 </body>
 </html>
+
+
+
+
+
+
