--- a/backend/helper/emailTemplate.html
+++ b/backend/helper/emailTemplate.html
@@ -67,6 +67,7 @@
 <body>
   <div class="container">
     <h1>Welcome to Our Service!</h1>
+    <img src="/home/stavan/Documents/aspire/e-comsite/backend/helper/images/welcome.jpg">
     <p>Thank you for registering. Please click the link below to verify your email address:</p>
     <a href="{{verificationUrl}}">Verify Email</a>
     <p>If you didn't request this, please ignore this email.</p>
