--- a/backend/helper/emailTemplate.html
+++ b/backend/helper/emailTemplate.html
@@ -1,86 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Email Verification</title>
-  <style>
-    /* Global styles */
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #f9f9f9;
-      margin: 0;
-      padding: 0;
-    }
-    .container {
-      max-width: 600px;
-      margin: 0 auto;
-      padding: 20px;
-      background-color: #ffffff;
-      border-radius: 8px;
-      box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-    }
-    h1 {
-      color: #48a4f0;
-      margin-top: 0;
-    }
-    p {
-      color: #555;
-      margin-bottom: 20px;
-    }
-    a {
-      display: inline-block;
-      padding: 12px 24px;
-      background-color:#4CAF50;
-      text:white;
-      color: #f4f4f4;
-      text-decoration: none;
-      border-radius: 4px;
-    }
-    footer {
-      margin-top: 20px;
-      color: #777;
-    }
-    .company {
-      color: #48a4f0;
-      font-weight: bold;
-    }
-
-    /* Mobile styles */
-    @media screen and (max-width: 480px) {
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Email Verification</title>
+    <style>
+      /* Global styles */
+      body {
+        font-family: Arial, sans-serif;
+        background-color: #f9f9f9;
+        margin: 0;
+        padding: 0;
+      }
       .container {
-        padding: 10px;
+        max-width: 600px;
+        margin: 0 auto;
+        padding: 20px;
+        background-color: #ffffff;
+        border-radius: 8px;
+        box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
       }
       h1 {
-        font-size: 24px;
+        color: #48a4f0;
+        margin-top: 0;
       }
       p {
-        font-size: 14px;
+        color: #555;
+        margin-bottom: 20px;
       }
       a {
-        padding: 10px 20px;
-        font-size: 14px;
+        display: inline-block;
+        padding: 12px 24px;
+        background-color: #4caf50;
+        text: white;
+        color: #f4f4f4;
+        text-decoration: none;
+        border-radius: 4px;
       }
-    }
-  </style>
-</head>
-<body>
-  <div class="container">
-    <h1>Welcome to Our Service!</h1>
-    <img src="/home/stavan/Documents/aspire/e-comsite/backend/helper/images/welcome.jpg">
-    <p>Thank you for registering. Please click the link below to verify your email address:</p>
-    <a href="{{verificationUrl}}">Verify Email</a>
-    <p>If you didn't request this, please ignore this email.</p>
-    <footer>
-      <p>Best regards,</p>
-      <p class="company">Zen Fusion</p>
-    </footer>
-  </div>
-</body>
+      footer {
+        margin-top: 20px;
+        color: #777;
+      }
+      .company {
+        color: #48a4f0;
+        font-weight: bold;
+      }
+
+      /* Mobile styles */
+      @media screen and (max-width: 480px) {
+        .container {
+          padding: 10px;
+        }
+        h1 {
+          font-size: 24px;
+        }
+        p {
+          font-size: 14px;
+        }
+        a {
+          padding: 10px 20px;
+          font-size: 14px;
+        }
+      }
+    </style>
+  </head>
+  <body>
+    <div class="container">
+      <h1>Welcome to Our Service!</h1>
+      <img src="/home/stavan/Documents/aspire/e-comsite/backend/helper/images/welcome.jpg" />
+      <p>Thank you for registering. Please click the link below to verify your email address:</p>
+      <a href="{{verificationUrl}}">Verify Email</a>
+      <p>If you didn't request this, please ignore this email.</p>
+      <footer>
+        <p>Best regards,</p>
+        <p class="company">Zen Fusion</p>
+      </footer>
+    </div>
+  </body>
 </html>
-
-
-
-
-
-
